# Aries

./: .gitignore  Cargo.toml  README.md  codex_mux.py  package.json  release-please-config.json
.github/workflows/: publish-npm-on-release.yml
scripts/: postinstall.js  release.js
src/: app.rs  lib.rs  main.rs  model.rs  store.rs  supervisor.rs  terminal.rs  worktree.rs
tests/: test_codex_mux.py
