[package]
name = "codex-mux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
portable-pty = "0.9"
rand = "0.9"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
vt100 = "0.15"

[dev-dependencies]
tempfile = "3.14"
